src/fr/2.0/introduction/index.md
# Introduction

[UnoPim](https://unopim.com/) est un système open-source de gestion des informations produit (PIM) basé sur le framework **Laravel 12** et nécessite **PHP 8.3**. Il aide les entreprises à organiser, gérer et enrichir leurs informations produit dans un référentiel central unique.

## Fonctionnalités

**1) Gestion centralisée des produits-**
Gérez toutes vos données produit en un seul endroit avec la prise en charge des types de produits Simple et Configurable.

**2) Enrichissement des données-**
Enrichissez vos informations produit avec des attributs détaillés, y compris la prise en charge de 12 types de données et des types de pastilles pour les options visuelles d'attribut.

**3) Gestion des catégories-**
Organisez les produits en catégories pour une navigation plus facile, avec des champs de catégorie personnalisables.

**4) Gestion des utilisateurs-**
Contrôlez l'accès et les autorisations des utilisateurs grâce au contrôle d'accès basé sur les rôles.

**5) Intégration API-**
Intégrez de manière transparente d'autres systèmes via des API RESTful avec authentification OAuth 2.0.

**6) Localisation-**
Prise en charge de plusieurs langues et locales avec traduction automatique alimentée par l'IA.

**7) Fonctionnalité d'import/export-**
Importez et exportez facilement les données produit aux formats CSV, XLS et XLSX, avec téléchargement de fichiers par glisser-déposer, suivi des tâches en temps réel et contrôles de pause/reprise/annulation.

**8) Magic AI pour la génération de contenu produit-**
Générez automatiquement du contenu produit attrayant à l'aide de la technologie LLM avancée prenant en charge plus de 10 fournisseurs IA, dont OpenAI, Gemini, Anthropic, Ollama et Groq.

**9) Prise en charge multi-canaux-**
Gérez et distribuez vos données produit sur plusieurs canaux de vente depuis une plateforme unique.

**10) AI Agent Chat-**
Interagissez avec votre PIM en langage naturel via l'interface AI Agent Chat avec plus de 30 outils PIM intégrés pour la gestion des produits, la qualité des données et les opérations en masse.

**11) Complétude du produit-**
Surveillez la qualité des données grâce au score de complétude du produit qui suit combien d'informations requises ont été renseignées par canal et locale.

**12) Notifications-**
Restez informé grâce aux notifications in-app et par e-mail concernant les tâches d'import/export, les modifications de produits et les événements système.

**13) Webhooks-**
Automatisez les workflows avec les webhooks de mise à jour de produit qui déclenchent des rappels HTTP lorsque les données produit changent.

**14) Tableau de bord enrichi-**
Obtenez une vue d'ensemble complète de votre catalogue grâce à des widgets pour les statistiques produit, les graphiques d'activité, les scores de complétude, l'état de préparation des canaux et les opérations récentes.

**15) Édition en masse des produits-**
Modifiez plusieurs produits à la fois en les sélectionnant dans le datagrid et en appliquant des modifications groupées aux attributs partagés.

**16) Prise en charge de PostgreSQL-**
Prise en charge complète des bases de données PostgreSQL en plus de MySQL pour une meilleure compatibilité multi-bases.
